<resources>
    <string name="app_name">SCFollowUp</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="str_user_id">Enter your user ID here</string>
    <string name="str_password">Enter password</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_pro_details">Pro Details</string>
    <string name="str_auto_lead_allotment">Auto Lead Allotment</string>
    <string name="str_manual_lead_allotment">Manual Lead Allotment</string>
    <string name="str_dgm_dashboard">DGM Dashboard</string>
    <string name="search_by_name_here">Search by name here…</string>
    <string name="allotment">Allotment</string>
    <string name="pending">Pending</string>
    <string name="view_details">View Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="call_status">Call Status</string>
    <string name="despositions">Dispositions </string>
    <string name="total_leads">Total Leads:</string>
    <string name="assign_leads_manually">Assign Leads Manually</string>
    <string name="lead_allocation">Lead Allocation</string>
    <string name="submit">Submit</string>

    <string name="loream">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet feugiat just Mauris auctor tincidunt ante a volutpat. Etiam id nisi velit. Pellentesque tempus ex ut ex mollis, id interdum ex pellentesque. Etiam quis condimentum nisi, vitae consectetur lectus.
    </string>
    <string name="add_notes">Add Notes</string>
    <string name="write_a_note_related_to_ashok_tata">Write a note related to Ashok Tata</string>
    <string name="save">Save</string>
    <string name="mention_subject_for_this_notes">Mention subject for this notes</string>
    <string name="write_your_notes_here">Write your notes here…</string>
    <string name="add_note">Add Note</string>
    <string name="assigned_leads">Assigned Leads</string>
    <string name="please_enter_userid">Please enter UserID</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="enter_your_phone_no">Enter your phone no</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="basic_information">Basic Information</string>
    <string name="full_name">FULL NAME</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="district">DISTRICT</string>
    <string name="gender">GENDER</string>
    <string name="course_information">Course Information</string>
    <string name="str_pro_dashboard">Pro Dashboard</string>
    <string name="str_follow_up">Follow Up</string>
    <string name="str_history">History</string>
    <string name="str_rank_predictor">Rank Predictor</string>
    <string name="lead_entry_form">Add New Lead</string>
    <string name="add_lead">Add Lead</string>
    <string name="address_collection">Address Collection</string>
    <string name="enter_state">Enter state</string>
    <string name="enter_city">Enter City</string>
    <string name="city">City</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="login">Login</string>
    <string name="welcome_to">Welcome to</string>
    <string name="user_id">User ID</string>
    <string name="sri_chaitanya_educational_institutions_nindia">Sri Chaitanya Educational Institutions\nIndia</string>
    <string name="password">Password</string>
    <string name="search">Search…</string>
    <string name="interested_course">Interested Course*</string>
    <string name="select_class">Select Class</string>
    <string name="landmark">Landmark</string>
    <string name="alternate_mobile_no">Alternate Mobile No</string>
    <string name="enter_mobile_no">Enter Mobile no</string>
    <string name="enter_hall_ticket_no">Enter hall ticket no</string>
    <string name="hall_ticket_no">Hall Ticket no</string>
    <string name="enter_landline_no">Enter Landline no</string>
    <string name="landline_no">Landline no</string>
    <string name="enter_school">Enter School</string>
    <string name="school">School*</string>
    <string name="relation_with_student">Relation with student</string>
    <string name="enter_relation_with_student">Enter Relation with student</string>
    <string name="dispositions">Dispositions</string>
    <string name="enter_comment">Enter Comment *</string>
    <string name="comment_feedback">Comment/Feedback</string>
    <string name="select_reminder_date">Select Reminder Date</string>
    <string name="reminder_date">Reminder Date*</string>
    <string name="enter_marks">Enter marks</string>
    <string name="address_details">Address Details</string>
    <string name="others">Others</string>
    <string name="overall_view">Overall View</string>
    <string name="good_morning">Good Morning</string>
    <string name="today_s_priority">Today\'s\nPriority</string>
    <string name="total_allotment">Total Allotment</string>
    <string name="lead">Lead</string>
    <string name="hi">Hi, %s</string>
    <string name="assign_leads">Assign Leads</string>
    <string name="total_leads_">Total Leads</string>
    <string name="subject">Subject</string>
    <string name="parents_name">Parents name</string>
    <string name="enter_parents_name">Enter parents name</string>
    <string name="gender_">Gender*</string>
    <string name="select_gender">Select gender</string>
    <string name="select_course">Select Course</string>
    <string name="class_">Class*</string>
    <string name="year_">Year*</string>
    <string name="select_year">Select Year</string>
    <string name="district_">District*</string>
    <string name="select_district">Select District</string>
    <string name="mandal_">Mandal*</string>
    <string name="select_mandal">Select Mandal</string>
    <string name="pincode_">Pincode*</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="state_">State</string>
    <string name="city_">City</string>
    <string name="select_city">Select City</string>
    <string name="post_office">Post Office</string>
    <string name="select_post_office">Select Post Office</string>
    <string name="notes">Notes</string>
    <string name="note">Note *</string>
    <string name="select_category">Select Category</string>
    <string name="date_of_joining">Date Of Joining</string>
    <string name="campus_name">Campus Name</string>
    <string name="designation">Designation</string>
    <string name="manager">Manager</string>
    <string name="student_name">Student Name</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="comments">Comments</string>
    <string name="what_happen_on_call">What Happen On Call? *</string>
    <string name="find_now">Find Now</string>
    <string name="enter_comment_feedback">Enter Comment/Feedback</string>
    <string name="comment_feedback_">Comment/Feedback</string>
    <string name="select_time">Select Time</string>
    <string name="in_time">IN TIME</string>
    <string name="time_">Time</string>
    <string name="out_time">OUT TIME</string>
    <string name="last_dialed_call">Last Dialed Call</string>
    <string name="redial">Redial</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_name">Employee Name</string>
    <string name="pan_card_details">PAN Card Details</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="aadhaar_details">Aadhaar Details</string>
    <string name="blood_group">Blood Group</string>
    <string name="sign_out">Sign Out</string>
    <string name="pf_number">PF Number</string>
    <string name="today_priority">Today\'s Priority</string>
    <string name="pending_calls">Pending Calls</string>
    <string name="communicated">Communicated</string>
    <string name="converted">Converted</string>
</resources>