<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/str_dashboard" />
    <item
        android:id="@+id/followUp"
        android:title="@string/str_follow_up"
        android:icon="@drawable/ic_followup"/>
    <item
        android:id="@+id/history"
        android:title="@string/str_history"
        android:icon="@drawable/ic_history"/>
    <item
        android:id="@+id/proDetails"
        android:icon="@drawable/ic_pro_details"
        android:title="@string/str_pro_details" />
    <item
        android:id="@+id/leadAllocation"
        android:icon="@drawable/ic_lead_allocation"
        android:title="Lead Allotment" />
</menu>