<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".activity.AddNotesActivity">

        <include
            android:id="@+id/llToolbar"
            layout="@layout/app_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWriteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/_10ssp"
            android:text="@string/write_a_note_related_to_ashok_tata"
            android:textColor="#979797"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/llToolbar" />

        <LinearLayout

            android:background="@drawable/spinner_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            app:layout_constraintTop_toBottomOf="@id/tvWriteTitle">



            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/edtSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/mention_subject_for_this_notes"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/dark_gray_text"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_12ssp" />




            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/edtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top"
                android:hint="@string/write_your_notes_here"
                android:lines="10"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/dark_gray_text"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:backgroundTint="#1B6EBA"
            android:fontFamily="@font/roboto_medium"
            app:cornerRadius="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>