<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".activity.LoginActivity">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/guidelineHorizontal"
            app:layout_constraintGuide_percent=".5"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/status_blue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_marginStart="@dimen/_2sdp"                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/login"
                    android:id="@+id/tvLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />



                <com.google.android.material.card.MaterialCardView
                    app:layout_constraintTop_toBottomOf="@id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="-30dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_6sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="@dimen/_20sdp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/welcome_to"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/sri_chaitanya_educational_institutions_nindia"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/user_id"
                            android:textColor="@color/dark_gray_text"
                            android:textSize="@dimen/_10ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtUserId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:inputType="text"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/str_user_id"
                            android:imeOptions="actionNext"
                            android:paddingBottom="@dimen/_12sdp"
                            android:textColor="@color/sub_title2"
                            android:textSize="@dimen/_10ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/password"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:textColor="@color/dark_gray_text"
                            android:textSize="@dimen/_10ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/str_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingBottom="@dimen/_12sdp"
                            android:textColor="@color/sub_title2"
                            android:textSize="@dimen/_10ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/edtUserId" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_marginTop="@dimen/_20sdp"

                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:backgroundTint="@color/status_blue"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/login"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            app:cornerRadius="@dimen/_5sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/edtPassword" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:elevation="@dimen/_1sdp"
                    android:id="@+id/ivLogo"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/tvLogin"
                    android:src="@drawable/sc_logo_new"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>