<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userData"
            type="com.varsity.dgmdashboard.model.LoginResponseModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10ssp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/employee_id"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="@dimen/_10ssp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="@dimen/_7sdp"
                    tools:text="dummy"
                    android:text='@{userData.payrollId != null ? userData.payrollId : "-"}'
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"/>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="0.7dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/date_of_joining"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="@dimen/_10ssp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/black"
                    android:text='@{userData.doj != null ? userData.doj : "-"}'
                    android:textSize="@dimen/_10ssp"/>

                <View
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="0.7dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/campus_name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="@dimen/_10ssp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/black"
                    android:text='@{userData.campusName != null ? userData.campusName : "-"}'
                    android:textSize="@dimen/_10ssp"/>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="0.7dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/designation"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="@dimen/_10ssp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/black"
                    android:text='@{userData.empDesig != null ? userData.empDesig : "-"}'
                    android:textSize="@dimen/_10ssp"/>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="0.7dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/subject"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="@dimen/_10ssp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="@dimen/_7sdp"
                    android:text='@{userData.subject != null ? userData.subject : "-"}'
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"/>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="0.7dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/manager"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="@dimen/_10ssp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="@dimen/_7sdp"
                    android:text='@{userData.managerName != null ? userData.managerName : "-"}'
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"/>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="0.7dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>